--- a/src/ext/visTest.fxml
+++ b/src/ext/visTest.fxml
@@ -1,32 +1,23 @@
+
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
-<?import ext.*?>
+<?import java.lang.*?>
+<?import java.util.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ProgressBar?>
-<?import javafx.scene.control.Slider?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.shape.Path?>
 <?import javafx.scene.shape.Rectangle?>
-<?import javafx.scene.chart.*?>
-
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="MP3Player">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
-    <AreaChart prefHeight="138.0" prefWidth="136.0" fx:id="visualizerChart">
-    <xAxis>
-        <CategoryAxis side="BOTTOM" />
-    </xAxis>
-    <yAxis>
-        <NumberAxis autoRanging="false" lowerBound="-120.0" minorTickCount="0" side="LEFT" upperBound="0.0" />
-    </yAxis>
-</AreaChart>
-    <HBox alignment="CENTER" fx:id="visualizerRectangle">
+<AnchorPane xmlns="http://javafx.com/javafx"
+            xmlns:fx="http://javafx.com/fxml"
+            fx:controller="ext.ChartVisualizer"
+            prefHeight="200.0" prefWidth="200.0">
+    Path fx:id="majorPath"/Path
+    <VBox alignment="BOTTOM_CENTER">
+    <HBox fx:id="Rectangles" alignment="CENTER">
         <children>
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="60.0" stroke="BLACK" strokeType="INSIDE" width="1.0" />
             <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="60.0" stroke="BLACK" strokeType="INSIDE" width="12.0" />
             <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="60.0" stroke="BLACK" strokeType="INSIDE" width="12.0" />
             <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="60.0" stroke="BLACK" strokeType="INSIDE" width="12.0" />
@@ -46,13 +37,7 @@
             <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="60.0" stroke="BLACK" strokeType="INSIDE" width="12.0" />
             <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="60.0" stroke="BLACK" strokeType="INSIDE" width="12.0" />
             <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="60.0" stroke="BLACK" strokeType="INSIDE" width="12.0" />
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="60.0" stroke="BLACK" strokeType="INSIDE" width="12.0" />
-        </children></HBox>
-    <Label fx:id="testLabel"/>
+    </children></HBox>
 
-
-    <Slider fx:id="progress"/>
-    <Label fx:id="welcomeText"/>
-    <Button text="Load!" onAction="#onHelloButtonClick"/>
-    <Button text="Play!" onAction="#onHelloPlayClick"/>
-</VBox>
+    </VBox>
+</AnchorPane>
