--- a/src/test-view.fxml
+++ b/src/test-view.fxml
@@ -14,7 +14,7 @@
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="1028.0" prefWidth="1440.0" style="-fx-background-color: #FAFAFA;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MP3Player">
    <children>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #2B2B2B;" AnchorPane.bottomAnchor="128.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-      <HBox layoutX="476.0" layoutY="610.0" prefHeight="128.0" prefWidth="200.0" style="-fx-background-color: #000000;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+      <HBox layoutX="476.0" layoutY="610.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="128.0" prefWidth="200.0" style="-fx-background-color: #000000;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <children>
             <ImageView fx:id="audio_cover" fitHeight="128.0" fitWidth="128.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -23,7 +23,7 @@
             </ImageView>
             <VBox maxHeight="-Infinity" prefHeight="128.0">
                <children>
-                  <Slider maxHeight="-Infinity" minHeight="-Infinity" prefHeight="5.0" />
+                  <Slider fx:id="time_slider" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="5.0" />
                   <HBox maxWidth="1.7976931348623157E308" prefHeight="123.0" prefWidth="1627.0">
                      <children>
                         <VBox minHeight="50.0" prefHeight="123.0" prefWidth="398.0">
@@ -63,7 +63,7 @@
                               <Button fx:id="play_pause_btn" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#play_pause_audio_event" prefHeight="64.0" prefWidth="64.0" style="-fx-background-color: #F6CB27; -fx-background-radius: 100%;">
                                  <graphic>
                                     <ImageView fx:id="play_pause_btn_icon" fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
-                                       <Image url="@resources/play_button.png"/>
+                                       <Image url="@resources/play_button.png" />
                                     </ImageView>
                                  </graphic>
                               </Button>
@@ -78,6 +78,11 @@
                               </Button>
                            </children>
                         </HBox>
+                        <Label fx:id="timestamp" text="Label" textFill="#fafafa">
+                           <HBox.margin>
+                              <Insets />
+                           </HBox.margin>
+                        </Label>
                      </children>
                   </HBox>
                </children>
