--- a/src/main/resources/fxml/MainView.fxml
+++ b/src/main/resources/fxml/MainView.fxml
@@ -12,13 +12,15 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<VBox xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MP3Player.controllers.MP3Player">
+<VBox xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MP3Player.controllers.MP3Player">
    <children>
       <MenuBar fx:id="menuBar">
         <menus>
@@ -45,11 +47,11 @@
                <children>
                   <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="1028.0" prefWidth="1440.0">
                      <children>
-                        <SplitPane fx:id="mainSplit" dividerPositions="0.25, 0.75" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="1028.0" prefWidth="1440.0" style="-fx-background-color: #2B2B2B;" stylesheets="@../css/test.css">
+                        <SplitPane fx:id="mainSplit" dividerPositions="0.25, 0.5" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="1028.0" prefWidth="1440.0" style="-fx-background-color: #2B2B2B;" stylesheets="@../css/test.css">
                           <items>
                             <AnchorPane fx:id="mainLeftSplit" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: #2B2B1B;" />
-                            <AnchorPane fx:id="mainCenterSplit" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" />
                               <AnchorPane fx:id="mainRightSplit" layoutX="10.0" layoutY="10.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="389.0" style="-fx-background-color: #2B2B1B;" />
+                            <AnchorPane fx:id="mainCenterSplit" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" />
                           </items>
                         </SplitPane>
                         <HBox alignment="BOTTOM_CENTER" maxHeight="128.0" maxWidth="1.7976931348623157E308" prefHeight="128.0" prefWidth="1440.0" style="-fx-background-color: #000000;">
@@ -131,7 +133,41 @@
                   </VBox>
                </children>
             </AnchorPane>
-            <BorderPane fx:id="playView" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #000000;" visible="false" StackPane.alignment="BOTTOM_CENTER" />
+            <BorderPane fx:id="playView" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #000000;" visible="false" StackPane.alignment="BOTTOM_CENTER">
+               <center>
+                  <AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #000000;" BorderPane.alignment="CENTER">
+                     <children>
+                        <GridPane alignment="CENTER" prefHeight="1028.0" prefWidth="1440.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                          </rowConstraints>
+                           <children>
+                              <VBox alignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+                                 <children>
+                                    <ImageView fitHeight="182.0" fitWidth="188.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../image/meAndUrMama.png" />
+                                       </image>
+                                    </ImageView>
+                                    <Label text="Play View Here" textFill="WHITE">
+                                       <font>
+                                          <Font name="Comic Sans MS" size="27.0" />
+                                       </font>
+                                    </Label>
+                                 </children>
+                              </VBox>
+                           </children>
+                        </GridPane>
+                     </children>
+                  </AnchorPane>
+               </center></BorderPane>
          </children>
       </StackPane>
    </children>
