--- a/src/main/resources/fxml/MainView.fxml
+++ b/src/main/resources/fxml/MainView.fxml
@@ -18,7 +18,7 @@
          <children>
             <ImageView fx:id="audio_cover" fitHeight="128.0" fitWidth="128.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../img/meAndUrMama.png" />
+                  <Image url="@../image/meAndUrMama.png" />
                </image>
             </ImageView>
             <VBox maxHeight="-Infinity" prefHeight="128.0" HBox.hgrow="ALWAYS">
@@ -55,7 +55,7 @@
                                  <graphic>
                                     <ImageView fx:id="prev_btn_icon" fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
-                                          <Image url="@../img/previous_icon.png" />
+                                          <Image url="@../image/previous_icon.png" />
                                        </image>
                                     </ImageView>
                                  </graphic>
@@ -63,7 +63,7 @@
                               <Button fx:id="play_pause_btn" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#play_pause_audio_event" prefHeight="64.0" prefWidth="64.0" style="-fx-background-color: #F6CB27; -fx-background-radius: 100%;">
                                  <graphic>
                                     <ImageView fx:id="play_pause_btn_icon" fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
-                                       <Image url="@../img/play_button.png" />
+                                       <Image url="@../image/play_button.png" />
                                     </ImageView>
                                  </graphic>
                               </Button>
@@ -71,7 +71,7 @@
                                  <graphic>
                                     <ImageView fx:id="next_btn_icon" fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
-                                          <Image url="@../img/next_icon.png" />
+                                          <Image url="@../image/next_icon.png" />
                                        </image>
                                     </ImageView>
                                  </graphic>
