--- a/src/main/resources/fxml/MainView.fxml
+++ b/src/main/resources/fxml/MainView.fxml
@@ -47,10 +47,10 @@
                <children>
                   <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="1028.0" prefWidth="1440.0">
                      <children>
-                        <SplitPane fx:id="mainSplit" dividerPositions="0.25, 0.5" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="1028.0" prefWidth="1440.0" style="-fx-background-color: #2B2B2B;" stylesheets="@../css/test.css">
+                        <SplitPane fx:id="mainSplit" dividerPositions="0.28, 0.57" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="1028.0" prefWidth="1440.0" style="-fx-background-color: #2B2B2B;" stylesheets="@../css/test.css">
                           <items>
-                            <AnchorPane fx:id="mainLeftSplit" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: #2B2B1B;" />
-                              <AnchorPane fx:id="mainRightSplit" layoutX="10.0" layoutY="10.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="389.0" style="-fx-background-color: #2B2B1B;" />
+                            <AnchorPane fx:id="mainLeftSplit" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: #F6CB27;" />
+                              <AnchorPane fx:id="mainRightSplit" layoutX="10.0" layoutY="10.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="389.0" style="-fx-background-color: #F6CB27;" />
                             <AnchorPane fx:id="mainCenterSplit" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" />
                           </items>
                         </SplitPane>
