--- a/src/tests/testResource/fxml/TestView.fxml
+++ b/src/tests/testResource/fxml/TestView.fxml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.chart.AreaChart?>
-<?import javafx.scene.chart.CategoryAxis?>
-<?import javafx.scene.chart.NumberAxis?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Slider?>
@@ -10,24 +8,46 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="TestMP3Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="TestMP3Controller">
    <children>
-      <HBox prefHeight="400.0" prefWidth="600.0">
+      <HBox nodeOrientation="RIGHT_TO_LEFT" prefHeight="400.0" prefWidth="500.0">
          <children>
-            <VBox alignment="CENTER" prefHeight="400.0" prefWidth="100.0">
+            <VBox prefHeight="400.0" prefWidth="400.0">
+               <children>
+                  <AnchorPane fx:id="visDispPane" prefHeight="400.0" prefWidth="400.0" />
+               </children>
+            </VBox>
+            <VBox alignment="CENTER" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="400.0" prefWidth="100.0">
                <children>
                   <Label fx:id="timestamp" text="Label" />
                   <Slider fx:id="time_slider" />
                   <Label fx:id="isTesting" prefHeight="68.0" prefWidth="166.0" text="This Label Signfies Debugging" />
-                  <Button mnemonicParsing="false" onAction="#debugSongLoader" text="Load" />
+                  <Button mnemonicParsing="false" onAction="#loadButton" text="Load" />
                   <Button mnemonicParsing="false" onAction="#play_pause_audio_event" text="Play/Pause" />
-                  <Button mnemonicParsing="false" onAction="#LoadWindow" text="PrimeVis" />
-               </children>
-            </VBox>
-            <VBox prefHeight="400.0" prefWidth="309.0">
-               <children>
-                  <AnchorPane prefHeight="200.0" prefWidth="200.0" fx:id="visDispPane"/>
-                  <AnchorPane prefHeight="200.0" prefWidth="200.0" fx:id="eqDispPane"/>
+                  <HBox alignment="CENTER" prefHeight="124.0" prefWidth="100.0">
+                     <children>
+                        <Slider max="3.141" min="-3.141" onMouseExited="#loadButton" orientation="VERTICAL" fx:id="xSlider">
+                           <padding>
+                              <Insets right="5.0" />
+                           </padding>
+                        </Slider>
+                        <Slider fx:id="ySlider" layoutX="51.0" layoutY="10.0" max="3.141" min="-3.141" onMouseExited="#loadButton" orientation="VERTICAL">
+                           <padding>
+                              <Insets right="5.0" />
+                           </padding>
+                        </Slider>
+                        <Slider fx:id="zSlider" layoutX="60.0" layoutY="10.0" max="3.141" min="-3.141" onMouseExited="#loadButton" orientation="VERTICAL">
+                           <padding>
+                              <Insets right="5.0" />
+                           </padding>
+                        </Slider>
+                        <Slider fx:id="fSlide" layoutX="70.0" layoutY="10.0" max="356.0" min="1.0" onMouseExited="#loadButton" orientation="VERTICAL" value="1.0">
+                           <padding>
+                              <Insets right="5.0" />
+                           </padding>
+                        </Slider>
+                     </children>
+                  </HBox>
                </children>
             </VBox>
          </children>
