--- a/src/main/resources/fxml/masterSongs.fxml
+++ b/src/main/resources/fxml/masterSongs.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="839.0" prefWidth="613.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MP3Player.controllers.MSongs">
+<VBox prefHeight="839.0" prefWidth="613.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MP3Player.controllers.MSongs">
    <HBox prefHeight="37.0" prefWidth="613.0">
       <children>
          <Button fx:id="removeButton" onAction="#handleRemoveButton" prefHeight="24.0" prefWidth="169.0" text="Remove">
@@ -38,7 +38,7 @@
          </Button>
       </children>
    </HBox>
-   <TableView fx:id="tableView" prefHeight="861.0" prefWidth="613.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+   <TableView fx:id="tableView" onSwipeLeft="#addToQueue" prefHeight="861.0" prefWidth="613.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
       <columns>
          <TableColumn fx:id="nameColumn" prefWidth="182.0" text="Name">
             <cellValueFactory>
