--- a/src/main/resources/fxml/masterSongs.fxml
+++ b/src/main/resources/fxml/masterSongs.fxml
@@ -38,7 +38,7 @@
          </Button>
       </children>
    </HBox>
-   <TableView fx:id="tableView" onSwipeLeft="#addToQueue" prefHeight="861.0" prefWidth="613.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+   <TableView fx:id="tableView" onKeyPressed="#addToQueue" prefHeight="861.0" prefWidth="613.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
       <columns>
          <TableColumn fx:id="nameColumn" prefWidth="182.0" text="Name">
             <cellValueFactory>
