--- a/src/main/resources/fxml/masterSongs.fxml
+++ b/src/main/resources/fxml/masterSongs.fxml
@@ -26,7 +26,7 @@
                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
             </HBox.margin>
          </Button>
-         <Button fx:id="Edit Song" onAction="#handleEditSongButton" prefHeight="24.0" prefWidth="100.0" text="Edit Song">
+         <Button fx:id="Edit_Song" onAction="#handleEditSongButton" prefHeight="24.0" prefWidth="100.0" text="Edit Song">
 			   <HBox.margin>
 				   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
 			   </HBox.margin>
